# pabutools

./: .coveragerc  .gitignore  README.md  README.rst  Todos.txt  pyproject.toml  requirements.txt  requirements_dev.txt  todos.txt
.github/workflows/: build.yml  publish.yml
analysis/: analysis_multiprofile.py  analysis_runtime.py  mes_runtime.py  pabutools_to_c.py  poland_wieliczka_2023.pb  rules.py  setup.py
analysis/analysis_elections/: ursynow_2021.pb
analysis/csv/: multiprofile_gain.csv  multiprofile_runtime.csv  runtime.csv
docs/: genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  usage.html
docs-source/: Makefile
docs-source/source/: conf.py  index.rst  quickstart.rst  usage.rst
docs/_modules/: collections.html  index.html  typing.html
docs/_sources/: index.rst  installation.rst  quickstart.rst  usage.rst
docs/reference/: fractions.html  index.html  tiebreaking.html  utils.html
docs/source/: conf.py  index.rst
pabutools/: __init__.py  fractions.py  tiebreaking.py  utils.py
pabutools/rules/: mes.py  (+6 more)
pbvoting/: fractions.py  tiebreaking.py  utils.py
tests/: all_tests.py  analysis_runtime.py  instance.py  pabulib.py  profile.py  rule.py  test.pb  test_analysis.py  test_ballots.py  test_class_inheritence.py  test_fractions.py  test_instance.py  test_multiprofile.py  test_multisat.py  test_out.pb  test_pabulib.py  test_preflib.py  test_profile.py  test_properties.py  test_rule.py  test_rule_composition.py  test_satisfaction.py  test_tiebreaking.py  test_utils.py  utils.py
(+954 files in other folders)
