[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pabutools"
version = "1.0.11"
description = "Implementation of all the tools necessary to explore and analyse participatory budgeting elections"
authors = [
  { name = "Simon Rey", email = "reysimon@orange.fr" },
  { name = "Grzegorz Pierczyński", email = "g.pierczynski@mimuw.edu.pl" },
  { name = "Markus Utke", email = "markusutke@gmx.de" },
  { name = "Piotr Skowron", email = "p.skowron@mimuw.edu.pl" },
]
license = { file = "LICENSE.md" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "mip",
    "gmpy2",
    "preflibtools",
    "natsort"
]

[project.optional-dependencies]
dev = [
    "coverage",
    "Sphinx",
    "sphinx-book-theme",
    "sphinxcontrib-napoleon",
    "unittest2"
]

[project.urls]
"Homepage" = "https://github.com/pbvoting/pabutools"
"Bug Tracker" = "https://github.com/pbvoting/pabutools/issues"
